--- a/todo.txt
+++ b/todo.txt
@@ -20,4 +20,7 @@ Backend
     - Move wordnet data to project dir
 
 
+
+WordNet
+
 https://stackoverflow.com/questions/18278219/wordnet-sql-explanation
