--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,6 @@ Frontend
         - WordSearch
     - Result layout
     - About page with Wordnet attribution
-    - Change css framework?
     - Fix CSS import/loading to apply style.css last
     - React CSS modules? https://github.com/gajus/babel-plugin-react-css-modules
 
@@ -17,6 +16,10 @@ Backend
     - Unit tests
     - Move wordnet data to project dir
 
+
+Bootstrap Variables
+
+https://github.com/twbs/bootstrap/blob/main/scss/_variables.scss
 
 
 WordNet
